--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -1,10 +1,8 @@
-
-
 	<meta content="target-densitydpi=device-dpi,user-scalable=1,minimum-scale=0.1,maximum-scale=2.5,width=device-width" name="viewport" />
 
 	<title>月行事曆</title>
 
-	<link href="/static/spreadsheets2/client/css/2637913187-waffle_k_ltr.css" nonce="" rel="stylesheet" type="text/css" />
+	<link href="/static/spreadsheets2/client/css/1114614849-waffle_k_ltr.css" nonce="" rel="stylesheet" type="text/css" />
 	<style nonce="" type="text/css">
 html { overflow: visible; }
         #sheets-viewport { overflow: auto; }
@@ -103,7 +101,7 @@ html { overflow: visible; }
         newUrl = newUrl.replace('&sle=true', '');
         window.history.replaceState(null, '', newUrl);
         }
-        </script><script nonce="">_docs_flag_initialData={"docs-daflia":true,"docs-cclt":57,"docs-mwid":true,"docs-smheo":true,"info_params":{"token":"AC4w5VjRJ3YkVjdgz0OBHUU6DWg-1CzlKA:1708479803197","includes_info_params":true},"docs-ecci":true,"ilcm":{"eui":"ADFN-cuZcPiKH9l-Z34p5Iy7-R1yEh180Hbz3d8zt4f898_WYFg-bjK7dQTPX9S-ZUh4pGUAEREp","je":1,"sstu":1708479803198466,"si":"CISYmp6nu4QDFaWrTwkdknIB3g","gsc":1,"ei":[5700019,5700057,5700103,5700333,5700422,5700559,5700579,5702135,5702936,5703182,5703259,5703839,5703938,5704621,5704883,5705301,5705777,5705891,5706007,5706069,5706169,5706270,5706786,5707047,5707204,5707711,5707820,5707947,5708480,5708576,5708886,5709085,5709357,5709476,5709661,5709673,5710692,5711471,5711550,5712146,5712635,5712909,5712913,5713195,5713554,5714310,5714326,5714465,5714674,5714839,5714843,5715364,5716149,5716457,5717157,5717949,5719527,5720568,5721814,5723284,5723679,5724215,5724435,5724533,5724896,5725934,5726695,5726752,5727257,5728201,5729092,5729206,5730225,5731835,5732339,5732391,5734392,5734632,5735134,5735252,5735670,5735806,5737153,5737254,5737800,5738081,5738215,5738569,5739778,5739837,5740186,5740341,5740731,5740814,5742056,5743452,5743787,5744348,5744595,5746311,5746724,5746992,5747216,5747351,5747881,5749276,5749715,5749835,5750110,5750254,5750313,5750371,5750750,5750900,5750978,5752714,5753681,5754269,5754919,5756417,5756457,5756655,5757382,5758497,5758616,5758674,5759278,5760167,5760307,5760450,5760470,5760760,5762381,5763557,5763577,5764007,5765491,5768017,5768325,5769791,5769871,5769915,5770170,5771370,5773794,5775693,5776215,5778980,5780532,5781480,5781789,5782030,5782181,5782224,5782635,5782984,5783713,5783897,5784602,5785577,5786403,5786678,5786966,5790119,5790897,5792161,5792836,5793785,5793845,5794164,5794509,5794913,5795929,5796051,5796864,5797331,5797412,5797453,5797699,5797719,5798732,5799994,13702623,48966202,49372328,49375222,49376219,49378789,49381162,49398749,49421452,49451639,49452965,49471971,49491685,49499289,49501724,49512213,49518590,49624180,49642865,49643596,49644123,49658602,49769325,49783962,49822909,49823112,49824143,49833550,49842983,49878668,49904347,49924754,49926201,49927387,49943127,49971941,49976048,49976863,49979824,50082768,50166919,50179510,50209525,50221888,50266150,50273416,50335675,50335857,50337777,50360128,50360924,50387063,50389258,50390045,50439168,50492390,50515215,50520300,50529291,50533204,50548862,50549583,50549979,50562903,50580212,50602289,50606435,70971284,70979490,70982439,71008121,71035368,71035445,71036581,71038323,71057317,71061488,71079072,71079886,71085309,71123552,71145456,71152218,71178780,71185118,71197954,71230113,71239114,71254182,71260410,71274245,71285869,71289134,71296556,71301238,71330481,71347020,71357861,71382606,71386873,71387877,71394887,71400634,71401213,71407433,71416980,71470324,71472042,71484155,71505363,71510858,71520558,71530131,71531265,71554380,71557997,71573978,71574683,71574786,71581648,71582476,71582804,71583158,71594882,71600985,71608368,71625728,71626751,71626772,71626804,71626825,71626898,71626929,71626959,71627039,71627059,71631283,71631566,71632384,71658068,71659901,71660166,71661068,71668061,71668390,71668426,71671686,71679508,71689928,71700636,71724156,71732226,71733823,71821506,71822072,71833012,71864221,71881399,71898015,71902351,71960488,94339749,94353296,94355935,94415333,94427808,94443530],"crc":0,"cvi":[]},"drive_url":"//drive.google.com/u/0?usp\u003dsheets_web","docs-liap":"/naLogImpressions","docs-sup":"/spreadsheets/u/0"}; _docs_flag_cek='zQQzMqmY4neBgaiWHaydfw\x3d\x3d'; if (window['DOCS_timing']) {DOCS_timing['ifdld']=new Date().getTime();}</script><script nonce="">document.addEventListener('DOMContentLoaded', init);</script>
+        </script><script nonce="">_docs_flag_initialData={"docs-daflia":true,"docs-cclt":57,"docs-mwid":true,"docs-smheo":true,"info_params":{"token":"AC4w5VjYyLTHRd8dvNh9cmaPbFcOxB4UZg:1712713838218","includes_info_params":true},"docs-ecci":true,"ilcm":{"eui":"ADFN-ctDaHZh1nheQCHjtBC5FVMdC71XIYAqrrvevCi-hWDJQrOJ-cU9DSGOmgu0ySbXGDAH8oBW","je":1,"sstu":1712713838220517,"si":"CPCpt5_EtoUDFZoLigMdDQkBXQ","gsc":1,"ei":[5700057,5700103,5700333,5700422,5700559,5700579,5702135,5702936,5703259,5703839,5703938,5704621,5704883,5705301,5705777,5705891,5706007,5706069,5706169,5706270,5706786,5707047,5707204,5707407,5707711,5707820,5707947,5708480,5708576,5708886,5709085,5709357,5709476,5709661,5709673,5710692,5711471,5711550,5712146,5712635,5712909,5712913,5713195,5713554,5714310,5714326,5714465,5714674,5714839,5714843,5715364,5716149,5716457,5717157,5717949,5719527,5720568,5721814,5723679,5724215,5724435,5724533,5724896,5725934,5726695,5726752,5727257,5729092,5729206,5730225,5731835,5732391,5734392,5734632,5735134,5735252,5735670,5735806,5737153,5737254,5737800,5738081,5738215,5739778,5739837,5740186,5740341,5740731,5740814,5742056,5743452,5743787,5744595,5746311,5746724,5747216,5747351,5747881,5749276,5749715,5749835,5750254,5750313,5750371,5750750,5750978,5753681,5754269,5754918,5756417,5756457,5756655,5757382,5758497,5758674,5759278,5760167,5760307,5760450,5760470,5760760,5762381,5763557,5763577,5765491,5768017,5768325,5769791,5769871,5769915,5770170,5771370,5771535,5773794,5776215,5780532,5781480,5781789,5782030,5782181,5782224,5782635,5782984,5783713,5783897,5784602,5785577,5786403,5786678,5786966,5787293,5789411,5790349,5790897,5792836,5793785,5793885,5794164,5794509,5794656,5794696,5794717,5794913,5795357,5795929,5796864,5797412,5797453,5797699,5797719,5798732,5799994,13702623,48966202,49372328,49375222,49381162,49398749,49421452,49451639,49452965,49471971,49491685,49499289,49501724,49512213,49518590,49629262,49642865,49643596,49644123,49658602,49769325,49783962,49822909,49823112,49824143,49833550,49842983,49878668,49904347,49924754,49926201,49927387,49943127,49971941,49976048,49976863,49979824,50082768,50166919,50179510,50209525,50221888,50266150,50273416,50297394,50335675,50335857,50360128,50360924,50387063,50389258,50390045,50439168,50492390,50498755,50515215,50520300,50529291,50549583,50549979,50562903,50580212,50602289,70971284,70979490,70982439,71008121,71035368,71035445,71036581,71038323,71061488,71079072,71079886,71085309,71123552,71145456,71152218,71178780,71185118,71197954,71239114,71254182,71260410,71274245,71289134,71330481,71347020,71357861,71386873,71387423,71387877,71391596,71394887,71400634,71407433,71451250,71470324,71472042,71484155,71505363,71510857,71520558,71530131,71531265,71531857,71544822,71554380,71573978,71581648,71582476,71582804,71583158,71594882,71600985,71608368,71612805,71614503,71614766,71625728,71626751,71626772,71626804,71626825,71626898,71626939,71626949,71627029,71627059,71627099,71631283,71631653,71632394,71652641,71658068,71659901,71660166,71661068,71668061,71668390,71669198,71671686,71679508,71681161,71689928,71700636,71710028,71722660,71724157,71732226,71733823,71794383,71798523,71821506,71822072,71833012,71878375,71881399,71891547,71898015,71902351,71924159,71958949,71959964,71960488,94332479,94333368,94353296,94354972,94391523,94415333,94427808,94429074,94429301,94429520,94434503,94442391,94445017,94454749,94467929,94479605,94482468,94492791,94492897,94493278,94522715,94554776,94573625,94585967,94618321,94626002,94650105,94671461,94679275],"crc":0,"cvi":[]},"drive_url":"//drive.google.com/u/0?usp\u003dsheets_web","docs-liap":"/naLogImpressions","docs-sup":"/spreadsheets/u/0"}; _docs_flag_cek='zQQzMqmY4neBgaiWHaydfw\x3d\x3d'; if (window['DOCS_timing']) {DOCS_timing['ifdld']=new Date().getTime();}</script><script nonce="">document.addEventListener('DOMContentLoaded', init);</script>
 	<style class="automa-element-selector" type="text/css">
 @font-face { font-family: "Inter var"; font-weight: 100 900; font-display: swap; font-style: normal; font-named-instance: "Regular"; src: url("chrome-extension://infppggnoaenmfagbfknfkancpbljcca/Inter-roman-latin.var.woff2") format("woff2") }
 .automa-element-selector { direction: ltr } 
@@ -133,31 +131,15 @@ html { overflow: visible; }
 				</thead>
 				<tbody>
 					<tr style="height: 24px">
-						<td class="s0" dir="ltr">
-							&nbsp;</td>
-						<td class="s0" dir="ltr">
-							&nbsp;</td>
-						<td class="s0" dir="ltr">
-							&nbsp;</td>
-						<td class="s0" dir="ltr">
-							&nbsp;</td>
-						<td class="s0" dir="ltr">
-							&nbsp;</td>
-						<td class="s1" dir="ltr">
-							&nbsp;</td>
-						<td class="s2">
-							&nbsp;</td>
-					</tr>
-					<tr style="height: 24px">
 						<td class="s3">
 							&nbsp;</td>
 						<td class="s4" colspan="2" rowspan="3">
 							<div style="width:157px;height:74px;">
-								<img src="https://lh7-us.googleusercontent.com/u/0/sheets/AMQP-diqrkUPJ0WmQr-0sV8ACyjipNa2xbEp8JQNKbHTuXpe4XBGzREPae2IB4G8WyLlVt-xXZN7nBSnNowqRTU_bmTkoLWfVK7khxTBZtsWyEbjzqOuhnQ1Uzc2PDCr3FWKnkw6NGTJnZKJ0561DdBKRMs9JAqikIwAV1YtYan4D5miLVn6QX4ckZi3cDfqO558ib3G9zCqpKkwN6KksYTvCTpv-kCRjSP8Ana9k-x762LfbmwUF72WPGFvjgPecuTuI8Im3Y2dzsXJw5NoW70sjgy2hGrXd1oAZF_ESuJ71lqMBkBZDytNKXVngEMXK3_QTXWfVnfv-J_PldiOZEJEdQ9mg2P5ZNAJ1lagX4KuN9vhSkTkxRvLP2E61xUamboF2Utun_hwGYVcV5sBPzdpW4euPFlw5hurgFyhecpAZZAdbH2ye-iAuEKUyZDhr5pSlGqXxd_N0x69U1-yKGSWDHJDOS360TMkaYB76eH1SvWhvRTEjnpH20j0ijyNh6twaataYvCBtSQKRSoTY6dSSqyY4HXwBW-iLQ0wSfkOWs0GhQcr8TktRqT-a_roVIRB6IHUSBKNwmOGhUIg3a0CAJC0_5VKFWvcC5yRzL-UcooLndvAdfEAEkK2MPl-zFLffUQmnI1ktDjR5iy7_AFVVvybFA4WDMozz9hB8yi5XuICGcDLXZCPrpy3lxdAeugwgVn4kw6Chbrfw6RDRc8kTfiMZurO8HHdNqxzkLCvZ1X7FMdi_TZb3HrPrCONS35uIf10-g-_p8wWWF9qRJPZj4MBjr2193thpbdD9bQkQOJeyUhKbkUDibJjouUSxEFs4M-y5W67gj1kwp9RkjkGW_6RDUVFydq8VIXCXmag6LxtG5ryULS9Zh0jC-aASvJ27LmfcmE5y0uMLcm8WtCHcNNFcSVfG0qyIiwnZJZk3NZ8PRJTRdgyJz0RoHQ6H5Hlcug=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+								<img src="https://lh7-us.googleusercontent.com/u/0/sheets/APBGjhbdhGGZ-Qs-ltBEn2I7OTDZvI8NLF0Y0r-IH1ZKkCQcD_RI-BjUeLxwakXLFrnOYXbYXhM5xqkoCI063dBQ1x5Su4KSG0lUjrwAln5_xblVoG8jsO39F4OZotBatIhSg4TJvmlN1XIDZyP0vuh5KSXRefM3micVOg13h6o2Cr4O-WtaYLu6BefnH9sQJoHeV5ZLit9sgZSENlAr6OtoNGMBbqhO-z2dwRl1AD836xpUfhBnQy8T6u3DipRQhAA0qCQXss7_ifa6qKvp83tZn7ZgUER2IaRG5WoidsIuzKhl8R0njnUk5KyaJFqDjRBVJqPzZTzy1yH-gKjpkfovI7L-aAZQLUs7pbkNHzX3LMfmYtSMgDYHrzwQ6X66MHEyY9ek9SArqPl7Y_xWfzVNrN0nsYM6aP-bun5aRw27BO1hBfH7w-qOqPePFz2MNy4bJJs10pCDD8tmMguVk4iBGfTxs6KARhZFau1GQSE_sgSt8dg9TW6vfwSZSQizUASTN7_FArIgdPyuFqTJ0CWhG_uZynZ3ZOfzUA-fGE_UIFm76QHCWRGAHkqEPGGwGOpB7eQp3jBrdh3L9Nm1gGM1dwcXwoF7CpO76L7L0pZM65D81ICFAdpcQMgKbqmh00SmuELn21QP6d4hSi4uFMa6gsfpGbyB1Dsaq2MewMzlIgfIraDVK7SqZyg1JEGR6wQVhKBNLHjnSVcnUdi-bOMg18SGbKzbq6HFNmYQan2Kw9Y9HYRniID-lMYSCykRUXzzvMvzgvUCaK8VkYPHdpC7oPBU6Gq5rocsADX3Rpgaw1heDhxW62JPmKTdOZVZeKVxcw3LuwRlYdPxuksspIDKiRyDF6ESjTWLlcV06b-QOWD3mwQxb-3C9DmNJNmPlqln94SHm1OxLzA09-_MP-ygUnNGJqGFJOYpnr-vZdBsJM6Sha1EPyKNnhUnEHxSvhqBD9NiKPMM=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 						</td>
 						<td class="s5" colspan="3" dir="ltr" rowspan="4">
 							高雄大學城哈佛大樓月行事曆<br />
-							<span style="font-size:19pt;">Kaohsiung Harvard Building Management Committee</span></td>
+							<span style="font-size:17pt;">Kaohsiung Harvard Building Management Committee</span></td>
 						<td class="s2">
 							&nbsp;</td>
 					</tr>
@@ -190,17 +172,15 @@ html { overflow: visible; }
 							&nbsp;</td>
 						<td class="s6" dir="ltr">
 							&nbsp;</td>
-						<td class="s6" dir="ltr">
-							&nbsp;</td>
-						<td class="s2" dir="ltr">
-							888</td>
+						<td class="s6" colspan="2" dir="ltr">
+							📅 2024/04/10 09:50</td>
 					</tr>
 					<tr style="height: 24px">
 						<td class="s6">
 							&nbsp;</td>
 						<td class="s7" colspan="5" rowspan="19">
 							<div style="width:954px;height:474px;">
-								<img src="https://lh7-us.googleusercontent.com/u/0/sheets/APBGjhbXddqvk2l9jPdrKuV1HBLGSaj7-n6EY2KxIFXcjqU35XvdUsP9PTJ44xYr6GBuZ4AG2XJ-ochQpZrozNav34RPYRtFkjRi_bF4Jzmpa9zyGWVnCm-49Lrvpsdmmv9kCX71FCDSLvFoTqMK_P8yuKFES7oQN_rYwKAtPb4APtW3aN7Lgp7GwkVAbF29NTupBsaAxEtW0UG7d2cgJlR1WBJ8qwjRldeSO-GlJvvvzH1M_rOm1hqLKWq6oJluEvcJWEM1ax_d8WQhtqns2Ge2rMTQT-6wryAhewP89BJOvNB8DXCHt7yK4oyVWLgeDtSRgz-QPmkRZ9-qfqYr3RXSN80gbbNj7wl95AzqZLzNezYoe1tovrdwOSiAePzCWH1A1D0i1rH_yVRhdb59_m7Bi0Z7NNolLJCHoPSUxzJrOVKgqzTeloWkL3nWJ4z4Cuz0CVHJ72GAwWQejQDfz0THn_cDrxEHPYo2JPbu9kTBzag73-tDnwfQQle7a4PBY1vEkg6_cm-OkodIrSb6G_booC2c4oAh8-Kjdb2C-TW0odPzU9Rw8UOlBACZYcZClZ1A868wAYCLRrFIqeidx7FZjBWGXaHPUPRC9-9OEdt1G7DGfhjoBC7uVhLQOw_k0ztlLH1K-lcI0Z5GPxMxCjStxDyuuzJPOhEaC5KmYbKg57c_Q20eYcoyUHxHi0KqUMqKZgYK63zbiAAqRU6Nf1KrY-8khruImyE-mP_808YI2fMY6tr_N8H_WR0Dwe3M0vuq-Bo3iXRWQ6TTFVmfI1Nwb5ao_phtgD9g9LykU4eX_aun0qF8h3d94SjsCiW5SEyGFi5bojVL2SzPYdrHUj-y51nkXVwVl2gf717IYOIFOiWLZS0SZ1DVxG1XgNfmAzRXhAcMO5lL4a-wOcn0yYSptTlsr9FNr5KV70VYq-78W6k7YSYTHgJpwnwKR0qijsY3y8gI=w954-h474" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
+								<img src="https://lh7-us.googleusercontent.com/u/0/sheets/APBGjhY5LcI4HUKBSFWIrlHvW-m8BQJUTe2ZG34TkX1Hh5v_jRhMTZLWqSugHDw02rgg3WAasJ-Lrwiw2ueLk5QDtpdfvaZTYpfxTIrTaRm6dG0PrsxOrhZqtlcQgDbNT9hchGSkHr2Y-gqdgLnOHtd9sbZGTZInNfOo6tAuk-5AyXp8ZNvqfySR6m4CXzR-OSn8BbRh7uzL4XWEbR0ovEYQ_PkpOHf9OOKTyLoStetkKlcNSyKIB3rCctcXLT15rCn4qGUPM4WzFqm3vYFmh9S4yQR9X02aMtQpe2ZxwAS3JtusaHXI3gFjx1nDrKzNk4x5-GeVxSer5Q0gloTO4UVi8BP08K7Ifb7-A0TjDO-2l04Jn3IqYblFOs9E_zOMM63-bwMJKPyKJ3k1dP_BdMZ2rvD0-FowkASBgcoqw9UomYTDmF4YqDjPXJRVCwa5LnWktkCD-H3ZRjlWEOi9WwERUblEclTQWNDOU0Ilh3nhe0Dvd0AcHW2mZPcN4MN1GsZKCM_wUxQW0cxvV6_0S8q8ajO8_V4qrPZHAAJgq78Leylafted9OD0uMmlrX_egz7K9HhqyMlqbKS4SHwJkGCU0oSe67t2EEKc1vhoilvBjiOOkOzDTTvnJo8W795O8YgKUBTgBV4hsJZ-3Chhz4kOz4ooc1jGi-xHATd8F5_VgO4FEIC8kMNxksbeHYg06qp87ZWG-8v4GuPxc90M5FMEMxi--a6tp_wLNn2CMK6gFLuHPhZ-IoMnFeDXabfUxFiH9SWBOyRv1kFV5yboHrbVONzQ_acX5X6w8pSwcg-ugy1XjYKW-v62g1g6Bv5zj_hghpcFbR-DC6DCn6EGIOFmqnTNwbZ_wrTRmexcieF_WFK1KofIvBzWcbZXinqygBzbBjANMngJ1MDzIHpYIza_9NdqezEBro2yBbWyH7oKOhoL4kyyC8sVstbP-3MiN4bd33XB2gBD=w954-h474" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
 						</td>
 						<td class="s2">
 							&nbsp;</td>
