--- a/Harvard/Page06.html
+++ b/Harvard/Page06.html
@@ -176,11 +176,15 @@ html { overflow: visible; }
 							📅 2024/04/10 09:50</td>
 					</tr>
 					<tr style="height: 24px">
+						<th class="row-headers-background row-header-shim" id="139461547R6" style="height: 24px;">
+							<div class="row-header-wrapper" style="line-height: 24px">
+								7</div>
+						</th>
 						<td class="s6">
 							&nbsp;</td>
 						<td class="s7" colspan="5" rowspan="19">
 							<div style="width:954px;height:474px;">
-								<img src="https://lh7-us.googleusercontent.com/u/0/sheets/APBGjhY5LcI4HUKBSFWIrlHvW-m8BQJUTe2ZG34TkX1Hh5v_jRhMTZLWqSugHDw02rgg3WAasJ-Lrwiw2ueLk5QDtpdfvaZTYpfxTIrTaRm6dG0PrsxOrhZqtlcQgDbNT9hchGSkHr2Y-gqdgLnOHtd9sbZGTZInNfOo6tAuk-5AyXp8ZNvqfySR6m4CXzR-OSn8BbRh7uzL4XWEbR0ovEYQ_PkpOHf9OOKTyLoStetkKlcNSyKIB3rCctcXLT15rCn4qGUPM4WzFqm3vYFmh9S4yQR9X02aMtQpe2ZxwAS3JtusaHXI3gFjx1nDrKzNk4x5-GeVxSer5Q0gloTO4UVi8BP08K7Ifb7-A0TjDO-2l04Jn3IqYblFOs9E_zOMM63-bwMJKPyKJ3k1dP_BdMZ2rvD0-FowkASBgcoqw9UomYTDmF4YqDjPXJRVCwa5LnWktkCD-H3ZRjlWEOi9WwERUblEclTQWNDOU0Ilh3nhe0Dvd0AcHW2mZPcN4MN1GsZKCM_wUxQW0cxvV6_0S8q8ajO8_V4qrPZHAAJgq78Leylafted9OD0uMmlrX_egz7K9HhqyMlqbKS4SHwJkGCU0oSe67t2EEKc1vhoilvBjiOOkOzDTTvnJo8W795O8YgKUBTgBV4hsJZ-3Chhz4kOz4ooc1jGi-xHATd8F5_VgO4FEIC8kMNxksbeHYg06qp87ZWG-8v4GuPxc90M5FMEMxi--a6tp_wLNn2CMK6gFLuHPhZ-IoMnFeDXabfUxFiH9SWBOyRv1kFV5yboHrbVONzQ_acX5X6w8pSwcg-ugy1XjYKW-v62g1g6Bv5zj_hghpcFbR-DC6DCn6EGIOFmqnTNwbZ_wrTRmexcieF_WFK1KofIvBzWcbZXinqygBzbBjANMngJ1MDzIHpYIza_9NdqezEBro2yBbWyH7oKOhoL4kyyC8sVstbP-3MiN4bd33XB2gBD=w954-h474" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
+								<img src="https://lh7-us.googleusercontent.com/u/7/sheets/APBGjha5alqa7WaNAfbrC_fXIBLAPpEuG_uG0NP4H4N0B3-9uluP5T_So_f3f3sgCZLA0tvyb7m-20LxTeaJG7ZE3cuUbCjzRDbw6sZUUXXYehjiyA8nVT43frmlcbTx1Hg1-TA5N733uN-fDLSBdNvqHeFwpNg497tmyZM2ubqF6asP1JWnzkebF2TChMgK4V-OT6jXkrUScPrgAr0d5_4gYDYa7iJT94pJhnYOpYrwdUG9URTAlbfvvgMQRFXbz19BXr5oC_Si61gZxlXifithtuyozJdMVKwtfeRD4FGPNAsU-4325swDD0ZPiRDtb4rek_zO6WUxhOMGk-Fp5Rge_Hbh0MaR5k4R0VloLk8hYDGW-GFjgxIhJPkIHbLdNIsLOvkjut6lH-_cTVNGngVYn1jAZQXAbn2E-OgObqQZPoWI6KCuxnWoH5I6cRbDdZvGLAfb5rxobB38oSgIJ-MXXgtgl_YPBMyVVv68Jal4gv81zsb__0Fr1Bo-codErSZ8TSMJ_4jTkux7_osNbwq4bcHRUvnDEsXynTMicQxh29AfoZxSoAl6BcJg2YGRAsksSMElXDnPrZ6ngfMdG11cg9cnkhJ5_vqOHWxguZdrhbM86uD79z2nfbbTmWE5Yr-DwVTlZifbYD6SkPNp7de2926MzYrT8Qr2STa3Sb5OBSPa6RwvZj3PsFZl_i1iDI6Y0rPoWQ7oYbCXD0_etqQ8ASmUNJyWXHqEyt8LHCQnh5HnmDiv-8K4NkegvvVTuYpJ5Qb9_DRQX1GSYNmHbnIXFVVZxKpbV-22uAwongqMPWs09iQBLsqFzNHT-STSVq9vjmBTCTwp7Tp1MPFJqp7-003bnejggOBrqNrb4mP1ncvs4A0IfcKwho6-vUMbX0TPuLyXKvZRmVmUQNM6hqC7nOXDMyGL_kVscvb8JVjNrFGaa6gJ-TN9d4kuXdyIAmPzdKjchE7Jefy33sfiCW5fX7XcUp5nc8of1-qwHsw2vvA2lz8sZQ_KxkGXNGW3rzW7xpG_egHbBlExxeOs1d3Su-lWShz3KTcQeyXMJ-h8Qf2xZRBUAWaKvQGOdAnCDmLUvqkztzbw90LGMckchkECvOoRJk6eG96VmvR6QGdzVdKi6AfhlA2EaiV94XPncbX9Y8XlohVTTIVYQsRWerALxPnY9--G3Q=w954-h474" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center center;" /></div>
 						</td>
 						<td class="s2">
 							&nbsp;</td>
