--- a/Harvard/Page04.html
+++ b/Harvard/Page04.html
@@ -127,7 +127,7 @@
 		<tr style="height: 24px">
 			<td class="s3">&nbsp;</td>
 			<td class="s4" colspan="2" rowspan="3">
-			<div style="width:157px;height:74px;"><img src="https://lh7-rt.googleusercontent.com/u/0/sheets/APBGjhZQBQVRjKstzO1FcfXZuQKLEf2q8bM8pjzt0yI-zBPX52GM9wLqSR5X8s6vuYj9hskshiNLjYT_RfABB_Tm5hoBwo2pNiW6IqPkGUx3BrEOEHQmOpHXjVtQxjhSnslvE4tqybJpJhBmdBvR64fJRwXwBOLwoVAJ5ZH6XAyFgkRCh0WQ1Jcu8QdXO5mtVNkFRFLfQWx3DUhlcUfzWUuz7OjsRCowatf8JHe411i83ZzpneRkXLr00apwNmiJV4evh-LFGNrrYPZbnsdcQ_d-Z4KW1sAX3590fCGPgRywW7KxojEildrPh-F1lrzNylo6ddbMQG6ggIq1OkeLHJrV77etQRQ9kHc0c3fU-weTUwu23WevLiyj_8ykxBiVn6vibjvhDYTNBVq0d4xJcjbOWxSI264SJx0Z643eBe0IPuZe9BVANLI-WylIxoiCqTV6__SxkVfBiJfHde0ZUnXXAefdsVOHfOY6mu6WSysXl86vQOsgxT3PYScqfp8P4ibage22UPUMHHiJasM8cUXwtg8KMLKLIQqBPIc3Wv6vZYppA60nYU-QsOM9gdMUpeLL7UBLCCjtbK4XeQT5CPaIKU7zR5ciuFZx-9hip-LftXSAULui3CYuUB1nNamJ8a1uDNr0Wq6jpW9wwgTKoT4e1B7ewy2sktbi14FPrQQuFJCj5g8G6h4INMgPmV0JDhcDcn0yJcd9wGtwcjuc_UPXzvpVBZFSGgrnh2mNQEhaJwiOvGybKxQXEQlSSWQLF0bwK8mNAV41xwD5r8SpxSpasZZ2BkkWM7r0_JOMCZUbk58OlJz-rtlgqE8ZPARy5I4rC6Lt53IwolJn_o5Ullh5AadYCTi3V20gtEF0igntO6BO_ZRNEEJ-e7FDqi078NDCSShyafuYzIbFKvb2GFMSmGktRJeh-OCA4w8X7DXbDjitwoVFe6le27mlkorUKTBMa7NYtFWT6yfBURnU90OceYrZW6EjLE-aRzhxNHqZ5V5_KP2ww44dnFYI9ARvVkAa2QtRvVsaxWobFJEmqnV_WSbhn4qYLDVmI71Lg87YgYMBkODkIvSk=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:157px;height:74px;"><img src="https://meee.com.tw/yqXr5z2" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s5" colspan="3" dir="ltr" rowspan="4">高雄大學城哈佛大樓異常排除</td>
 			<td class="s2">&nbsp;</td>
