--- a/Harvard/Page04.html
+++ b/Harvard/Page04.html
@@ -127,7 +127,7 @@
 		<tr style="height: 24px">
 			<td class="s3">&nbsp;</td>
 			<td class="s4" colspan="2" rowspan="3">
-			<div style="width:157px;height:74px;"><img src="https://lh7-rt.googleusercontent.com/u/0/sheets/APBGjhZx0xUTK276CGPiGq-e2wsETf8CtNTE0Fu81jkPMZAv70UUVlXXY_9u8dGfFxxQJWfnjp9i3cx6xdiWrp1D9vN5y9QT9KovVWM_UxSBqrS7FJt_XxqWWVRvcWRKE1tKA_la-1VddVaPjHZfd-JHc97iFS0NBAlO6A7FT0mUQr4vsSvGYm1LqQ8ov7UvGN1jj_dUbSCKRT3Ee1yq5j3iDfuIrkBxrqY7a7Rb2Tmlpwg49GWMtdCmxUOF9QTv8DQdIwPyru6vu76PA-iJsfTp7k6zL0_tBB6jWEaLYGEc10Njp6ilLX_UENAv1qlbLQ1-vgud7OGE5RYXLyUYpExk64fod3AWthDQHpA7iKDWiuvOym2V27hgypeYqeg3OwcAM6TH5yC1uKhku3wRFHfMw51pgbVAVLk4fBe33vMsJBVO6UCuF5e6kw29f54TP0wBVwYSaoTpp3c03m_BjdtRGLaaU_bDCQVLjSUMi8vp2c9tP6zYs2XeKqK5gJj2FGRgrfqGs1rfFJfJ3Ocw4B8yjX1Y20SulIdCZmKiDszW6kj_yl62gBJULMQ0SRnxaeBX6KvUIKkR9H17TQvgT6UAZiVeU0TrKpg07azP_qt-IbN5X_ETffXVjEDWL80iBrBDf0o6W5q5gx42QQxRJT_04KDZ45U_m9CCDg4Ay8FdwngDiCFPVcxza4uDzQokLujEjRnvtDoEAUWdyFTZuuosyAK2H6ogMfAR-EqYU4Cgt0BlejFeLzpqPnCyGOtMauhsPOTn_S3vByQDudHwGgkLdsbKgn6L0FFyinY6odG4CkjKhLlGqVTzYA8JZX2QR61maLLBD_GrRJPTPiy_1wRARqhOz34PqU0ERyNfP_yPWoYDxE1yasZDbYefg5_7dXm-ELNqz3GyclqjqN4sjuM377MBFOWjkldRue9Cqma4FfTYMN544Jnv-bRiWCMhT6g5xJizJjfaWrsUy3D7Nx3XDY1RLEGo57_fKXDeOXwH4m7SEMpgbRU4lEfHqnbNDE6IyZDkciQQMtQyy_5aIURtAhGH35hz2xpw2lR8CKY3BBy0BYJjHrU=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:157px;height:74px;"><img src="https://i.meee.com.tw/yqXr5z2.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s5" colspan="3" dir="ltr" rowspan="4">高雄大學城哈佛大樓異常排除</td>
 			<td class="s2">&nbsp;</td>
