--- a/Harvard/Page04.html
+++ b/Harvard/Page04.html
@@ -127,7 +127,7 @@
 		<tr style="height: 24px">
 			<td class="s3">&nbsp;</td>
 			<td class="s4" colspan="2" rowspan="3">
-			<div style="width:157px;height:74px;"><img src="https://i.meee.com.tw/yqXr5z2.png" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+			<div style="width:135px;height:85px;"><img src="https://i.meee.com.tw/LHPFKHJ.jpg" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 			</td>
 			<td class="s5" colspan="3" dir="ltr" rowspan="4">高雄大學城哈佛大樓異常排除</td>
 			<td class="s2">&nbsp;</td>
